# Geometry

./: CMakeLists.txt  README.md  geometry.h  main(2).cpp  main.cpp
